# browsergrid/cmd/schema-loader/main.go
@@ -7,6 +7,7 @@ import (
 
 	"ariga.io/atlas-provider-gorm/gormschema"
 
+	"github.com/autocrawlerHQ/browsergrid/internal/profiles"
 	"github.com/autocrawlerHQ/browsergrid/internal/sessions"
 	"github.com/autocrawlerHQ/browsergrid/internal/workpool"
 )
@@ -18,6 +19,7 @@ func main() {
 		&sessions.SessionMetrics{},
 		&sessions.Pool{},
 		&workpool.WorkPool{},
+		&profiles.Profile{},
 	)
 	if err != nil {
 		fmt.Fprintf(os.Stderr, "failed to load gorm schema: %v\n", err)
